# cursudsol

./: .gitignore  CMakeLists.txt
include/: Cell.h  CurSudSol.h  Direction.h  Drawer.h  Grid.h  Group.h  NDLoop.h  Order.h  Rule.h  Solver.h
include/rules/: CandidateRemoval.h  EmptyRule.h  HiddenPair.h  HiddenSingle.h  NakedPair.h  NakedSingle.h  PointingSet.h  Rule.h
plugins/CandidateRemoval/: CMakeLists.txt
plugins/CandidateRemoval/include/: CandidateRemoval.h
plugins/CandidateRemoval/src/: CandidateRemoval.cc
plugins/EmptyRule/: CMakeLists.txt
plugins/EmptyRule/src/: EmptyRule.cc
plugins/HiddenN/: CMakeLists.txt
plugins/HiddenN/include/: HiddenN.h
plugins/HiddenN/src/: HiddenN.cc
plugins/HiddenSingle/: CMakeLists.txt
plugins/HiddenSingle/src/: HiddenSingle.cc
plugins/IntersectionRemoval/: CMakeLists.txt
plugins/IntersectionRemoval/include/: IntersectionRemoval.h
plugins/IntersectionRemoval/src/: IntersectionRemoval.cc
plugins/NakedN/: CMakeLists.txt
plugins/NakedN/include/: NakedN.h
plugins/NakedN/src/: NakedN.cc
plugins/NakedSingle/: CMakeLists.txt
plugins/NakedSingle/src/: NakedSingle.cc
plugins/XWing/: CMakeLists.txt
plugins/XWing/include/: XWing.h
plugins/XWing/src/: XWing.cc
src/: Cell.cc  CurSudSol.cc  Drawer.cc  Grid.cc  NDLoop.cc  Order.cc  Solver.cc  test.cc
src/rules/: CandidateRemoval.cc  EmptyRule.cc  HiddenN.cc  HiddenPair.cc  HiddenSingle.cc  IntersectionRemoval.cc  NakedN.cc  NakedPair.cc  NakedSingle.cc  PointingSet.cc  Rule.cc  XWing.cc
tests/: hiddenPair  hiddenSingle  nakedPair  pointingSet  xwing
